--- a/KK/korunmus.html
+++ b/KK/korunmus.html
@@ -50,14 +50,14 @@
 <p>En’am suresinde “la’iben ve lehven”, A’raf suresinde “lehven ve la’iben”.
 <figure>
   <img src="./ittehazu_dinehum.png" alt="ittehazu_dinehum" />
-  <figcaption><a href="/Kuran/#b={t~axa*uwA@%20diynahumo" target=iqraTop>ittehazu dinehum</a></figcaption>
+  <figcaption><a href="/Kuran/#b={t~axa*uwA@%20diynahumo" target=iqraTop>ittehazû dînehum</a></figcaption>
 </figure>
 </p>
 
 <p>Başka bir ifade, “ebvâbe cehennem” ufak farklarla üç ayette geçiyor:
 <figure>
   <img src="./ebvabe_cehennem.png" alt="ebvabe_cehennem" />
-  <figcaption><a href="/Kuran/#b=%3Eabowa%60ba%20jahan~ama" target=iqraTop>ebvabe_cehennem</a></figcaption>
+  <figcaption><a href="/Kuran/#b=%3Eabowa%60ba%20jahan~ama" target=iqraTop>ebvâbe cehennem</a></figcaption>
 </figure>
 </p>
 
@@ -65,14 +65,14 @@
 <p>Kerim Kitâbımızın korunmuşluğuna ilginç bir örnek “key lâ” kelimesi. 7 âyette geçen bu söz bazan bitişik yazılıyor, bazan ayrılmış iki kelime, anlam değişmediği halde imlâsı farklı. Bütün mushaflarda bu ayrıntı korunmuş: <a href="/Kuran/#b=kaYo%20laA" target=iqraTop>3 yerde ayrı</a>, hiç farklı görünmeyen <a href="/Kuran/#b=kayolaA" target=iqraTop>4 yerde bitişik</a> yazılıyor. Nahl suresinde iki kelime halinde iken, Hacc suresinde aynı ifade içindeki boşluk silinir ve tek kelime kalır. Bu örneği zorlaştıran ikinci fark, <i>min</i> kelimesi bir ayette var, diğerinde yok.
 <figure>
   <img src="./bade_ilmin.png" alt="bade_ilmin" />
-  <figcaption><a href="/Kuran/#b=bEd%20Elm" target=iqraTop>bade_ilmin</a></figcaption>
+  <figcaption><a href="/Kuran/#b=bEd%20Elm" target=iqraTop>ba'de 'ilmin</a> (sesliler silinmiş)</figcaption>
 </figure>
 </p>
 
 <p>Şu örnekte yine okunuş ve anlam aynı, imlâ farklı. Neml suresinde fazladan bir yâ harfi var, kırâati ve mânâyı değiştirmediği halde mushaflarda muhafaza edilmiş.
 <figure>
   <img src="./bihadilumyi.png" alt="bihadilumyi" />
-  <figcaption><a href="/Kuran/#b=%3Eanta%20biha%60di" target=iqraTop>bihadilumyi</a></figcaption>
+  <figcaption><a href="/Kuran/#b=%3Eanta%20biha%60di" target=iqraTop>ente bihâd</a></figcaption>
 </figure>
 </p>
 
@@ -82,20 +82,20 @@
 
 <p>Aynı şeyi söyleyen ayet çiftlerinde kullanılan farklı zamirlere bakalım. Bu amaç için, “o, onu, onun” anlamındaki iki zamiri tanımak yeterli:</p>
 <ul>
-  <li>hu – müzekker (eril)</li>
-  <li>hâ – müennes (dişil)</li>
+  <li><b>hu</b> – müzekker (eril)</li>
+  <li><b>hâ</b> – müennes (dişil)</li>
 </ul>
 
 <p>Mesela sahabeden söz ederken bu farkı gözeterek Hz Ebubekir için “radiyallahu ‘anhu”, Hz Aişe için “radiyallahu ‘anhâ” deriz. Arada sadece bir elif farkı var.</p>
 
-<p>İlk örneğimiz “sizi sularız, size içiririz” anlamındaki <b>nusqîkum</b> kelimesi, hayvanlardan aldığımız sütü anlatıyor. “Karınlarından” derken kullanılan zamirlerin biri müzekker butûnihi, diğeri müennes butûnihâ:
+<p>İlk örneğimiz “sizi sularız, size içiririz” anlamındaki <b>nusqîkum</b> kelimesi, hayvanlardan aldığımız sütü anlatıyor. “Karınlarından” derken kullanılan zamirlerin biri müzekker <b>butûnihi</b>, diğeri müennes <b>butûnihâ</b>:
 <figure>
   <img src="./nusqiykum.png" alt="nusqiykum" />
   <figcaption><a href="/Kuran/#b=nsqykm" target=iqraTop>nusqiykum</a></figcaption>
 </figure>
 </p>
 
-<p>İkinci örnek “öğüt” anlamına gelen <b>tezkiratun</b>. Kendisi müennes olan bu kelime, aslında Kur’an için kullanılıyor. Buna işaret eden zamir ise iki yerde müzekker innehû, iki yerde müennes hâzihî (“bu” anlamında işaret zamiri), bir yerde de müennes innehâ:
+<p>İkinci örnek “öğüt” anlamına gelen <b>tezkiratun</b>. Kendisi müennes olan bu kelime, aslında Kur’an için kullanılıyor. Buna işaret eden zamir ise iki yerde müzekker <b>innehû</b>, iki yerde müennes <b>hâzihî</b> (“bu” anlamında işaret zamiri), bir yerde de müennes <b>innehâ</b>:
 <figure>
   <img src="./tezkira.png" alt="tezkira" />
   <figcaption><a href="/Kuran/#b=ta*okirapN" target=iqraTop>tezkira</a></figcaption>
@@ -105,14 +105,16 @@
 <p>Son olarak, Hz İsa’nın babasız yaratılışını hatırlatan iki ayette “üfledik” anlamında <b>nefahnâ</b>. Bu kelimeden sonra gelen zamirlerin biri müennes <b>fîhâ</b>, diğeri müzekker <b>fîhi</b>:
 <figure>
   <img src="./nefahna.png" alt="nefahna" />
-  <figcaption><a href="/Kuran/#b=nfxnA" target=iqraTop>nefahna</a></figcaption>
+  <figcaption><a href="/Kuran/#b=nfxnA" target=iqraTop>nefahnâ</a></figcaption>
 </figure>
 </p>
 
 <p>Burada vurgulanan farkların, ayetin anlamını değiştirmediği çok açık. Peki neden böyle bir titizlik gerekiyor? Çünkü mesajın aslı öyle, harfler aslına uygun korunmuş.</p>
 
+<p>Söz konusu <b>fîhi</b> kelimesi 154 kere geçiyor ve hepsinde ilk hece uzun, ikinci kısa okunur. <a href="/Kuran/#b=fiyhi." target=iqraTop>Sadece bir yerde</a> <b>fîhî</b> şeklinde, iki hecesi de uzun okunur. Farklı okunuş <a href="https://quran.com/25/69" target=Kuran>burada</a>.</p>
+
 <h3 id="elif-farki">5. Bir Elif Farkı</h3>
-<p>35 yıl önce, bilgisayarda Kuran okumak henüz bir hayal iken, <i>subhâne</i> kelimesini araştırmak bir tam gün sürmüştü. Her kelimenin hangi ayetlerde geçtiğini endeksleyen Mucem kitaplarını kullanıyorduk o zaman. Şimdi sonuçlar saniyede çıkıyor.</p>
+<p>1980'lerde, bilgisayarda Kuran okumak henüz bir hayal iken, <i>subhâne</i> kelimesini araştırmak bir tam gün sürmüştü. Her kelimenin hangi ayetlerde geçtiğini endeksleyen Mucem kitaplarını kullanıyorduk o zaman. Şimdi sonuçlar saniyede çıkıyor.</p>
 
 <p><b>Finder</b> yazılımı <i>subhâne</i> kelimesinin aynen geçtiği 40 ayeti gösteriyor:
 <figure>
@@ -156,8 +158,15 @@
 </figure>
 </p>
 
+<p>Silinen bir elif de <b>bismi</b> kelimesinde: Lazfa-i celal ile birlikte olan <a href="/Kuran/#b=bisomi" target=iqraTop>3 besmelede elif gizleniyor</a>, <b>rabb</b> kelimesi ile birlikte olan <a href="/Kuran/#b=bAsm" target=iqraTop>4 ayette elif yazılıyor</a>. Bütün mushaflarda bu ayrıntı da korunmuş.
+  <figure>
+    <img src="./bismi.png" alt="bismi" />
+    <figcaption><a href="/Kuran/#v=96:1" target=iqraTop>bismi</a></figcaption>
+  </figure>
+  </p>
+
 <h3 id="nimet-sunnet">6. Nimet, Sunnet, Rahmet</h3>
-<p>Bu üç kelimenin anlamına değil yazılışına bakalım. Üç kelimenin de son sesi olan T, köküne ait değil. Müennes te’si, çoğu zaman çift noktalı he ile yazlıyor. Bazan ama normal te’ye dönüşüyor. <b>Nimet</b> kelimesi ile başlayalım:
+<p>Bu üç kelimenin anlamına değil yazılışına bakalım. Üç kelimenin de son sesi olan T, kelimenin köküne ait değil. Müennes te’si, çoğu zaman çift noktalı he ile yazlıyor. Bazan ama normal te’ye dönüşüyor. <b>Nimet</b> kelimesi ile başlayalım:
 <figure class="narrow">
   <img src="./nimetullah.png" alt="nimet" />
   <figcaption><a href="/Kuran/#b=kuruwA@%20niEoma" target=iqraTop>uzkurû ni’me</a> &emsp; ve
@@ -165,7 +174,7 @@
 </figure>
 </p>
 
-<p>Yukarıda ni’metallah tamlamasının iki farklı yazılışı görülüyor, şeklin altında ise bini’metillah. Özellikle aşağıdaki Nahl suresi örneği önemli, çünkü ardarda iki ayette bir öyle bir böyle yazılmış ve fark aynen korunmuş.</p>
+<p>Yukarıda <b>ni’metallah</b> tamlamasının iki farklı yazılışı görülüyor, şeklin altında ise <b>bini’metillah</b>. Özellikle aşağıdaki Nahl suresi örneği önemli, çünkü ardarda iki ayette bir öyle bir böyle yazılmış ve fark aynen korunmuş.</p>
 
 <p><b>Sunnet</b> kelimesi için de benzeri bir tablomuz var:
 <figure class="narrow">
@@ -175,7 +184,7 @@
 </figure>
 </p>
 
-<p>Üstte lisunnetillah tamlamasının iki farklı yazılışı görülüyor, şeklin altında ise özne halinde sunnetul-evvelîn. “Neden böyle yazılır, ne anlamı var?” sorularına hiç girmeden, korunmuş ilginç ayrıntılar olarak kaydediyoruz. Rahmet kelimesi için de benzeri farklar var, ama bu kelime çok sayıda geçtiği için örneklere dahil edilmedi.</p>
+<p>Üstte <b>lisunnetillah</b> tamlamasının iki farklı yazılışı görülüyor, şeklin altında ise özne halinde <b>sunnetul-evvelîn</b>. “Neden böyle yazılır, ne anlamı var?” sorularına hiç girmeden, korunmuş ilginç ayrıntılar olarak kaydediyoruz. (<b>Rahmet</b> kelimesi için de benzeri farklar var, ama bu kelime çok sayıda geçtiği için örneklere dahil edilmedi)</p>
 
 
 <h3 id="sin-sad">7. Sin mi Sad mı?</h3>
