--- a/ders/index.html
+++ b/ders/index.html
@@ -35,9 +35,10 @@ Videolar burada</a></p>
 <h3>Örnek Sayfalar</h3>
 <p>Iqra yazılımını uygulayan web sayfaları</p>
 <ol>
-  <li><a href="../cuma/adalet.html">Adalet ve ibadet</a></li>
-  <li><a href="../cuma/rabler.html">Allah bir, rabler çok</a></li>
-  <li><a href="../cuma/geylani.html">Letters of Geylani</a></li>
+  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik</a></li>
+  <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet</a></li>
+  <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok</a></li>
+  <li><a href="/Kitap/cuma/geylani.html">Letters of Geylani</a></li>
   <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuş Kitap</a></li>
 </ol>
 
