correct one letter

--- a/KK/korunmus.html
+++ b/KK/korunmus.html
@@ -158,7 +158,7 @@
 </figure>
 </p>
 
-<p>Silinen bir elif de <b>bismi</b> kelimesinde: Lazfa-i celal ile birlikte olan <a href="/Kuran/#b=bisomi" target=iqraTop>3 besmelede elif gizleniyor</a>, <b>rabb</b> kelimesi ile birlikte olan <a href="/Kuran/#b=bAsm" target=iqraTop>4 ayette elif yazılıyor</a>. Bütün mushaflarda bu ayrıntı da korunmuş.
+<p>Silinen bir elif de <b>bismi</b> kelimesinde: Lafza-i celal ile birlikte olan <a href="/Kuran/#b=bisomi" target=iqraTop>3 besmelede elif gizleniyor</a>, <b>rabb</b> kelimesi ile birlikte olan <a href="/Kuran/#b=bAsm" target=iqraTop>4 ayette elif yazılıyor</a>. Bütün mushaflarda bu ayrıntı da korunmuş.
   <figure>
     <img src="./bismi.png" alt="bismi" />
     <figcaption><a href="/Kuran/#v=96:1" target=iqraTop>bismi</a></figcaption>
