--- a/ders/index.html
+++ b/ders/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"    content="width=device-width">
-    <meta name="author"      content="M A Eyler, Istanbul, 2021" />
-    <meta name="description" content="Words from Quran" />
-    <link rel="stylesheet" href="ders.css" media="all">
-    <link rel="icon" href="/Kuran/image/icon.png">
-    <title>Iqra Dersler</title>
-  </head>
+<meta charset="UTF-8">
+<meta name="viewport"    content="width=device-width">
+<meta name="author"      content="M A Eyler, Istanbul, 2021" />
+<meta name="description" content="Words from Quran" />
+<link rel="stylesheet" href="ders.css" media="all">
+<link rel="icon" href="/Kuran/image/icon.png">
+<title>Iqra Dersler</title>
 
-  <body>
 <h2>Giriş</h2>
 
 <h3>Arapça Dersler</h3>
 <p>Arapça’yı Kuran’dan alınmış örneklerle öğrenebilir miyiz?</p>
 <ol>
-  <li><a href="01.html">İsimler</a></li>
-  <li><a href="02.html">Cümle yapısı</a></li>
-  <li><a href="03.html">Sıfat ve zamirler</a></li>
-  <li><a href="04.html">Tekil, ikil, çoğul</a></li>
-  <li><a href="05.html">Sayılar</a></li>
-  <li><a href="06.html">Fiil çekimi</a></li>
-  <li><a href="07.html">Kelime türetme</a></li>
-  <li><a href="sunum4.2.html">Sunum V4.2</a></li>
-  <li><a href="yaygin.html">Sık geçen kelimeler</a></li>
-  <li><a href="Allah.html">Lafza-i Celâl</a></li>
+  <li><a href="01.html">İsimler</a>
+  <li><a href="02.html">Cümle yapısı</a>
+  <li><a href="03.html">Sıfat ve zamirler</a>
+  <li><a href="04.html">Tekil, ikil, çoğul</a>
+  <li><a href="05.html">Sayılar</a>
+  <li><a href="06.html">Fiil çekimi</a>
+  <li><a href="07.html">Kelime türetme</a>
+  <li><a href="sunum4.2.html">Sunum V4.2</a>
+  <li><a href="yaygin.html">Sık geçen kelimeler</a>
+  <li><a href="Allah.html">Lafza-i Celâl</a>
 </ol>
 <p><a target="video"
 href="https://www.youtube.com/playlist?list=PLBDiqooDrruuxXBQfIcHErlGbFcD21YQ1">
@@ -35,12 +32,17 @@ Videolar burada</a></p>
 <h3>Örnek Sayfalar</h3>
 <p>Iqra yazılımını uygulayan web sayfaları</p>
 <ol>
-  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik</a></li>
-  <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet</a></li>
-  <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok</a></li>
-  <li><a href="/Kitap/cuma/geylani.html">Letters of Geylani</a></li>
-  <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuş Kitap</a></li>
+  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik</a>
+  <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet</a>
+  <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok</a>
+  <li><a href="/Kitap/cuma/geylani.html">Letters of Geylani</a>
+  <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuş Kitap</a>
+</ol>
+<br>
+
+<h3>Garibce'den Seçmeler</h3>
+<p>https://garibce.blogspot.com/ sitesinden alıntılar</p>
+<ol>
+  <li><a href="/Kitap/garibce/hakdin.html" target=KK>Din dediğin ne ki</a>
 </ol>
 
-  </body>
-</html>
