--- a/ders/index.html
+++ b/ders/index.html
@@ -43,6 +43,6 @@ Videolar burada</a></p>
 <h3>Garibce'den Seçmeler</h3>
 <p>https://garibce.blogspot.com/ sitesinden alıntılar</p>
 <ol>
-  <li><a href="/Kitap/garibce/hakdin.html" target=KK>Din dediğin ne ki</a>
+  <li><a href="/Kitap/garibce/hakdin.html">Din dediğin ne ki</a>
 </ol>
 
