--- a/ders/index.html
+++ b/ders/index.html
@@ -44,5 +44,6 @@ Videolar burada</a></p>
 <p>https://garibce.blogspot.com/ sitesinden alıntılar</p>
 <ol>
   <li><a href="/Kitap/garibce/hakdin.html">Din dediğin ne ki</a>
+  <li><a href="/Kitap/garibce/mihrap.html">Mihrap Yazıları</a>
 </ol>
 
