--- a/garibce/hakdin.html
+++ b/garibce/hakdin.html
@@ -11,8 +11,7 @@
 <title>Din dediğin ne ki Hak’tan gayrı! </title>
 
 <h2 id=baslik></h2>
-<div class=pre>
-Garibce nazarımda din, yaratılışa içkin olan bir şey.
+<div class=pre>Garibce nazarımda din, yaratılışa içkin olan bir şey.
 İnsanlığın omzuna yüklenen ve “emanet” denilen şey.
 Âdem babadan beri var olan ve tevarüs edilen bir şey.
 İnsanlığın ikinci atası Nuh ile ahitleşilen şey.
