--- a/ders/index.html
+++ b/ders/index.html
@@ -45,5 +45,6 @@ Videolar burada</a></p>
 <ol>
   <li><a href="/Kitap/garibce/hakdin.html">Din dediğin ne ki</a>
   <li><a href="/Kitap/garibce/mihrap.html">Mihrap Yazıları</a>
+  <li><a href="/Kitap/garibce/bahane.html">Bahaneye benzese</a>
 </ol>
 
