--- a/ders/index.html
+++ b/ders/index.html
@@ -41,10 +41,11 @@ Videolar burada</a></p>
 <br>
 
 <h3>Garibce'den Seçmeler</h3>
-<p>https://garibce.blogspot.com/ sitesinden alıntılar</p>
+<p><a href=https://garibce.blogspot.com/ target=Kuran>garibce.blogspot.com</a> sitesinden alıntılar</p>
 <ol>
   <li><a href="/Kitap/garibce/hakdin.html">Din dediğin ne ki</a>
   <li><a href="/Kitap/garibce/mihrap.html">Mihrap Yazıları</a>
   <li><a href="/Kitap/garibce/bahane.html">Bahaneye benzese</a>
+  <li><a href="/Kitap/garibce/takva.html">Cemal ve Celal</a>
 </ol>
 
