--- a/ders/index.html
+++ b/ders/index.html
@@ -43,9 +43,10 @@ Videolar burada</a></p>
 <h3>Garibce'den Seçmeler</h3>
 <p><a href=https://garibce.blogspot.com/ target=Kuran>garibce.blogspot.com</a> sitesinden alıntılar</p>
 <ol>
-  <li><a href="/Kitap/garibce/hakdin.html">Din dediğin ne ki</a>
+  <li><a href="/Kitap/garibce/hakdin.html">Din dediğin ne ki?</a>
   <li><a href="/Kitap/garibce/mihrap.html">Mihrap Yazıları</a>
   <li><a href="/Kitap/garibce/bahane.html">Bahaneye benzese</a>
   <li><a href="/Kitap/garibce/takva.html">Cemal ve Celal</a>
+  <li><a href="/Kitap/garibce/ihsan.html">Adaletten öte: İhsan</a>
 </ol>
 
