garibce minor corrections

--- a/garibce/bahane.html
+++ b/garibce/bahane.html
@@ -23,7 +23,8 @@ Demiş: “Benim parmağı şerifim ağrıyor.”
 İnsan bahane bulmada, mazeret üretmede çok mahirdir. Hem başarıyı ister, ama onu gerçekleştirmenin önündeki engelleri aşmak için gerekli çabayı göstermek yerine bin bir türlü bahane üretir.
 Aslında kendisi de bilir kaç kırat olduğunu ya da ürettiği mazeretlerin ne denli yersiz ve bahanelerinin geçersiz olduğunu.
 Kıyamet gününde bile insan mazeretler serdedecekmiş. Ama herkes, kendisinin ne hal üzere olduğunu da bilecekmiş. Yani üretilen mazeretlerin hilaf-ı hakikat olması halinde şapka düşecek kel görünecekmiş: 
-<b>Beli’l-insânu basîre <a name="v=75:15&r=E*r">velev elkâ meâzîreh</a></b> (75/15) 
+<b>Beli’l-insânu basîre <a name="v=75:15&r=E*r">velev elkâ meâzîreh</a></b> 
+(Kıyamet 75/15) 
 Evet o gün kişi her şeyi görecek, bahanelerin, ileri sürdüğü mazeretlerin hiçbir şeye yaramadığını anlayacak!
 O gün çok dehşetli olacak.
 <a name="v=3:106&r=byD&r=swd">O gün kimi yüzler ağaracak kimi yüzler kararacak.</a>
@@ -33,7 +34,7 @@ Tebük seferi için hazırlıklar yapılmaktadır. Çok uzak ve zor olacak bir s
 Çok zor ve sıkıntılı olduğu için bu gazveye <a name="v=9:117&r=Esr">gazvetü’l-usre</a> denilmişti.
 İslam artık çevre güçlerle de yüzleşmek durumundaydı. Bizans (Doğu Roma) İslam’ı daha beşiğinde iken boğmak isterdi. Yaşamak için güçlü olmak gerekiyordu. Güçlü olmak için çok çalışmak, fedakarlık yapmak, her şeyi sunmak, bu yola baş koymak lazımdı.
 Eften püften bahanenin yeri ve zamanı değildi. Tek yumruk halinde hareket etmek lazımdı. İşte böyle bir ortamda hazırlıkların yapıldığı sırada Hz. Peygamber Cedd b. Kays’a “Ey Cedd! Şu sarışın Romalılara karşı koymaya ne dersin?” diye sormuştu. “Sem’an ve taaten!” diyeceği yerde Cedd: “Ben kadınlara düşkün biriyim.  Ne zaman bu sarışın Romalı kadınları görsem kendimi tutamam, onların fettanlığı karşısında kendime hakim olamam, iyisi mi sen  bana izin ver, ben oralara hiç gitmeyeyim. Beni bu kadınların fitnesinden korumuş ol!”  dedi.  Bunun üzerine şu âyet geldi:
-<span class=meal>“Onlardan ‘Bana izin ver, beni fitneye sevk etme’ diyen de vardır. Bilesiniz ki onlar (böyle diyerek) fitnenin ta içine düştüler. Şüphesiz ki cehennem, kâfirleri elbette kuşatacaktır.”</span> (<a name="v=9:49&r=Esr">et-Tevbe 9/49</a>).
+<span class=meal>“Onlardan ‘Bana izin ver, beni fitneye sevk etme’ diyen de vardır. Bilesiniz ki onlar (böyle diyerek) fitnenin ta içine düştüler. Şüphesiz ki cehennem, kâfirleri elbette kuşatacaktır.”</span> (<a name="v=9:49&r=Esr">Tevbe 9/49</a>).
 İnsanın özünde olmayınca, olmuyor. İman, kalpte yer edecek, davranışlar oradan neşet edecek. İnançlar ve eylemler erdemleri geliştirecek ve olgunlaştıracak. Özümüzde meknuz ve mündemiç bulunan cevherler işte böylece ortaya çıkacak ve daha iyi bir insan olmanın bilkuvve (potansiyel) imkanı, bilfiil hale dönüşecek.
 İşte bu niyet ve azim olmayınca insan Hz. Peygamber asrında da yaşamış olsa, bizzat onu gören gözlere, onu işiten kulaklara da sahip olsa, kalbi ve gönlü ona  yeterince bağlı değilse, böylesine saçma bahaneler ile bile yanına gidip sureta haktan gözüküp saçmalayabilmektedir.
 Hz. Peygamber’i sözde aldatabileceğini düşünenler, olmadık bahaneler ileri sürenler acaba gerçekten Allah’ı ve peygamberini aldatabileceklerini mi sanırlar. Hatta ve hatta kişi kendi özünü bile ikna edebilir mi?
@@ -46,6 +47,7 @@ Kimse bahane üretmesin! Hele insanlıktan dem vuranlar!
 Sudan bahaneleriniz sadece sizin ayarınızı ortaya koyuyor. Çavdar ekmeğine bahane bulmaya değil, kişi kendi özüne, niyetine ve azmine bakmalı.
 Onları yenilemeli!
 Dua ile!
+
 22.03.2013
 GARİBCE
 </div>
