--- a/garibce/hakdin.html
+++ b/garibce/hakdin.html
@@ -16,12 +16,12 @@
 Âdem babadan beri var olan ve tevarüs edilen bir şey.
 İnsanlığın ikinci atası Nuh ile ahitleşilen şey.
 İnsanlığa mal edilen Kitaplarda yeri olan şey.
-Din Allah’ın Nuh’a,  İbrahim’e, Musa’ya, İsa’ya ve son toka halkası Muhammed’e vasiyet ettiği, onlarla ahitleştiği şey <a name="v=42:13&r=wSy">[42/13]</a>.
-Zaman değişir, ahkâm değişir ama bir şey değişmez. O insanlıkla birlikte hep vardır ve var olacaktır. O da insanlığın fıtratıdır, doğasıdır, safiyetidir. “Gerçek din” işte bu fıtrattır <a name="v=30:30&r=fTr">[30/30]</a>. Din namına söylenen her şey işte bu fıtratın ortaya çıkarılması, safiyetinin korunması ve özdeki cevherin işlenmiş mücevherlere dönüştürülmesi gibi bir amacı gerçekleştirmeye yönelik olmalıdır. İnsan özde mükerremdir ama bu yatkınlık anlamındadır, yetkin hale gelmesi için beklemesi ve bir takım basamaklardan, tecrübelerden geçmesi gerekir. Mekârim-i ahlak kutlu İslam ağacının meyvesidir; onu hasad etmek için önceleyen bir dizi emeğe ihtiyaç vardır.
-Âdemden, Nuh’tan başlayarak insanlığa mal edilmiş bütün eski ve temel metinlerde hep adaletten bahsedilir. Adalet her şeye hakkını vermektir. Adalet, Rabbi Rab kulu kul bilmektir. Şirk dahi adaletsizliğin bir sonucudur. Çünkü şirk, bir takım içi boş uyduruk isimlere <a name="v=12:40&r=Ebd">[12/40]</a> asla kendinde olmayan değerler yükleyip, onları yüceltmek hatta onları yaratıcıya eş tutmaktır.
+Din Allah’ın Nuh’a,  İbrahim’e, Musa’ya, İsa’ya ve son toka halkası Muhammed’e vasiyet ettiği, onlarla ahitleştiği şey <a name="v=42:13&r=wSy">[Şura 42/13]</a>.
+Zaman değişir, ahkâm değişir ama bir şey değişmez. O insanlıkla birlikte hep vardır ve var olacaktır. O da insanlığın fıtratıdır, doğasıdır, safiyetidir. “Gerçek din” işte bu fıtrattır <a name="v=30:30&r=fTr">[Rum 30/30]</a>. Din namına söylenen her şey işte bu fıtratın ortaya çıkarılması, safiyetinin korunması ve özdeki cevherin işlenmiş mücevherlere dönüştürülmesi gibi bir amacı gerçekleştirmeye yönelik olmalıdır. İnsan özde mükerremdir ama bu yatkınlık anlamındadır, yetkin hale gelmesi için beklemesi ve bir takım basamaklardan, tecrübelerden geçmesi gerekir. Mekârim-i ahlak kutlu İslam ağacının meyvesidir; onu hasad etmek için önceleyen bir dizi emeğe ihtiyaç vardır.
+Âdemden, Nuh’tan başlayarak insanlığa mal edilmiş bütün eski ve temel metinlerde hep adaletten bahsedilir. Adalet her şeye hakkını vermektir. Adalet, Rabbi Rab kulu kul bilmektir. Şirk dahi adaletsizliğin bir sonucudur. Çünkü şirk, bir takım içi boş uyduruk isimlere <a name="v=12:40&r=Ebd">[Yusuf 12/40]</a> asla kendinde olmayan değerler yükleyip, onları yüceltmek hatta onları yaratıcıya eş tutmaktır.
 Tâ Nuh kanunlarından beri gelen esasların özünü: Âdil hukuk düzeni oluşturma, puta tapmama, Tanrı’ya küfretmeme, cinsel ahlaksızlıktan sakınma, adam öldürmeme, hırsızlık yapmama, canlı hayvandan et koparıp yememe gibi hususlar oluşturur. (Eldar Hasanov, Nûh Kanunları ve Nûhîlik, İSAM y. Ankara 2015, s. 63)
 Sina’da İsrailoğullarından alınan ahidde on emir önceki ahitleri teyit etmiştir.
-İsa’nın dağ vaazında ve nihayet Bizim Kitab’ımızda bu husus İsra suresinde [<a name="v=17:23&r=qDy">17/23</a> ve devamı] aynı esaslar kimi tekraren, kimi daha açık biçimde vurgulanmıştır.
+İsa’nın dağ vaazında ve nihayet Bizim Kitab’ımızda bu husus İsra suresinde [<a name="v=17:23&r=qDy">İsra 17/23</a> ve devamı] aynı esaslar kimi tekraren, kimi daha açık biçimde vurgulanmıştır.
 Bunların hepsi eline beline diline sahip olmak diye formüle edilse sezadır.
 İslam’ı temsil edecek yegâne kelime HAK’tır.
 Ne sevgi, ne saygı ne de nefret Hak olmadıkça anlamsızdır ve yersizdir.
@@ -37,8 +37,8 @@ Varlık amacınız gerçekleşir.
 Allah meleklerine “İşte bakın! <a name="v=2:30&r=Elm">Siz bilemezsiniz, Ben bilirim!</a>” der.
 Sizinle övünür.
 Olur mu, olur!
-
 Dua ile!
+
 06 Temmuz 2017
 GARİBCE
 </div>
