--- a/garibce/ihsan.html
+++ b/garibce/ihsan.html
@@ -8,7 +8,7 @@
 <link rel="apple-touch-icon" href="garibce.png">
 <link rel="icon" href="garibce.png">
 <link rel="stylesheet" href="garibce.css">
-<title>Adaletten öte bir şey var mı? İhsan </title>
+<title>Adaletten öte bir şey var mı? </title>
 
 <h2 id=baslik></h2>
 <div class=pre>Kur’an’da “adl” ve “âdil” sözcükleri Allah için kullanılmıyor.
@@ -17,8 +17,9 @@ Buna mukabil el-Esmâu’l-hüsnâ arasında “el-adl” var.
 Ama buna karşılık insanlara “adaletli” olmaları emrediliyor. Kin ve öfke dolu olunan insanlara karşı bile adaletli olunması emrediliyor ve adaletin takva için en uygun davranış biçimi olduğu vurgulanıyor. [<a name="v=5:8&r=Edl">Mâide 5/8</a>]
 En cami (kapsayıcı anlam yüklü) ayetlerimizden biri, her Cuma hutbesinin en sonunda okunan <a name="v=16:90&r=Edl">en-Nahl 16/90</a> ayetidir:
 <figure>
+  <a href="https://tr.pinterest.com/pin/182958803590731603/" target=Kuran>
     <img src="ihsan.jpg" alt="innallahe yemuru ">
-    <figcaption><a href="https://tr.pinterest.com/pin/182958803590731603/" target=Kuran>pinterest</a></figcaption>
+  </a>
 </figure><span class=meal>“Şüphesiz Allah, adaleti, iyilik yapmayı, yakınlara yardım etmeyi emreder; hayâsızlığı, fenalık ve azgınlığı da yasaklar. O, düşünüp tutasınız diye size öğüt veriyor.”</span>
 Adalet, her şeye hakkını vermek demektir. Allah’ı tazim, tahmîd, tesbih, tehlil, tekbir ve tevhid… bilumum saygı ve tapınma anlamı içeren davranışlar sadece O’nun uluhiyet ve rububiyet hakkıdır. Bunu O’na özgülemek yerine yedek tanrılar (putlar) edinip, onları da tazime paydaş görmek,  ancak Allah’a nispet edilmesi söz konusu saygıyı bu uyduruk şeylere de nispet etmek şirk koşmaktır ve şirk en büyük zulüm sayılmaktadır. [<a name="v=31:13&r=Zlm">Lokman 31/13</a>]
 Onluk yapana on, beşlik yapana beş vermek adalettir.
@@ -34,8 +35,8 @@ Mesela kısasa kısas adalettir. Ama bağışlamak ihsândır; ancak muhsinlerin
 Birisine borç vermiştir. Vadesi gelmiştir. Ama adam ödememiştir. Kişinin borcunu ödemeyen o kimseyi mahkemeye vermesi ve cebrî icra yoluyla hakkını alması adalettir. Kimse ona haksızlık yaptı diyemez. Ama o kimsenin <a name="v=2:280&r=ysr">“fe nazıratun ilâ meysere”</a> fahvâsınca o kişiye mühlet vermesi, ilave süre tanıması, vadeyi uzatması ihsan mertebesiyle alakalı bir davranıştır.
 Hele borcun kısmen ye da tamamen bağışlanması ihsan üstü ihsan demektir.
 Allah’ın sevdiği <a name="v=2:195&r=Hsn">“muhsinler”</a> de işte bunlardır.
-
 Bizi de onlardan kılması duasıyla!
+
 25.07.2013
 GARİBCE
 </div>
