--- a/ders/index.html
+++ b/ders/index.html
@@ -48,5 +48,6 @@ Videolar burada</a></p>
   <li><a href="/Kitap/garibce/bahane.html">Bahaneye benzese</a>
   <li><a href="/Kitap/garibce/takva.html">Cemal ve Celal</a>
   <li><a href="/Kitap/garibce/ihsan.html">Adaletten öte: İhsan</a>
+  <li><a href="/Kitap/garibce/diken.html">Ayağıma diken batsa</a>
 </ol>
 
