--- a/ders/index.html
+++ b/ders/index.html
@@ -10,6 +10,17 @@
 
 <h2>Giriş</h2>
 
+<h3>Kur'an Kelimeleri</h3>
+<p>Yüce Kitabımızda kelime analizleri</p>
+<ol>
+  <li><a href="Allah.html">Lafza-i Celâl</a>
+  <li><a href="enbiya.html">Peygamberler</a>
+  <li><a href="yaygin.html">Sık geçen kelimeler</a>
+  <li>Özel isimler -- yapılıyor
+  <li><a href="sunum4.2.html">Sunum V4.2</a>
+</ol>
+<br>
+
 <h3>Arapça Dersler</h3>
 <p>Arapça’yı Kuran’dan alınmış örneklerle öğrenebilir miyiz?</p>
 <ol>
@@ -20,9 +31,6 @@
   <li><a href="05.html">Sayılar</a>
   <li><a href="06.html">Fiil çekimi</a>
   <li><a href="07.html">Kelime türetme</a>
-  <li><a href="sunum4.2.html">Sunum V4.2</a>
-  <li><a href="yaygin.html">Sık geçen kelimeler</a>
-  <li><a href="Allah.html">Lafza-i Celâl</a>
 </ol>
 <p><a target="video"
 href="https://www.youtube.com/playlist?list=PLBDiqooDrruuxXBQfIcHErlGbFcD21YQ1">
@@ -32,15 +40,16 @@ Videolar burada</a></p>
 <h3>Örnek Sayfalar</h3>
 <p>Iqra yazılımını uygulayan web sayfaları</p>
 <ol>
-  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik</a>
   <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet</a>
   <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok</a>
   <li><a href="/Kitap/cuma/geylani.html">Letters of Geylani</a>
+  <li><a href="/Kitap/garibce/">Garibce'den Seçmeler</a>
   <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuş Kitap</a>
+  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik</a>
 </ol>
 <br>
 
-<h3>Garibce'den Seçmeler</h3>
+<!-- <h3>Garibce'den Seçmeler</h3>
 <p><a href=https://garibce.blogspot.com/ target=Kuran>garibce.blogspot.com</a> sitesinden alıntılar</p>
 <ol>
   <li><a href="/Kitap/garibce/hakdin.html">Din dediğin ne ki?</a>
@@ -49,5 +58,5 @@ Videolar burada</a></p>
   <li><a href="/Kitap/garibce/takva.html">Cemal ve Celal</a>
   <li><a href="/Kitap/garibce/ihsan.html">Adaletten öte: İhsan</a>
   <li><a href="/Kitap/garibce/diken.html">Ayağıma diken batsa</a>
-</ol>
+</ol> -->
 
