simplify css and html

--- a/ders/enbiya.html
+++ b/ders/enbiya.html
@@ -1,41 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"    content="width=device-width">
-    <meta name="author"      content="M A Eyler, Istanbul, 2021" />
-    <meta name="description" content="Words from Quran" />
-    <link rel="stylesheet" href="ders.css" media="all">
-    <link rel="icon" href="/Kuran/image/icon.png">
-    <title>Enbiyâ </title>
-  </head>
+<meta charset="UTF-8">
+<meta name="viewport"    content="width=device-width">
+<meta name="author"      content="M A Eyler, Istanbul, 2021" />
+<meta name="description" content="Words from Quran" />
+<link rel="stylesheet" href="ders.css" media="all">
+<link rel="icon" href="/Kuran/image/icon.png">
+<title>Enbiyâ </title>
 
-<style>
-  table {
-    border-collapse: collapse;
-    margin: auto;
-  }
-  td {
-    padding: 6px;
-    border: 0.5px solid;
-    text-align: center;
-  }
-  .wide {
-    min-width: 110px;
-  }
-  .left {
-    text-align: left;
-  }
-  th {
-    font-weight: normal;
-    padding-right: 4px;
-  }
-  .head {
-    font-weight: bold;
-  }
-  m { color: blue; }
-</style>
-  <body>
 <h3>Enbiyâ (Peygamberler) &emsp; <button class=goBack>◀</button></h3>
 
 <p>Kuran-ı Kerim'de adı geçen 25 peygamber:
@@ -62,7 +34,7 @@ Lût	luwT	6:86 7:80 11:70 11:74 11:77 11:81 11:89 15:59 15:61 21:71 21:74 22:43 
 İbrâhîm	<iboraAhiym	2:124 2:125 2:126 2:127 2:130 2:132 2:133 2:135 2:136 2:140 2:258 2:260 3:33 3:65 3:67 3:68 3:84 3:95 3:97 4:54 4:125 4:163 6:74 6:75 6:83 6:161 9:70 9:114 11:69 11:74 11:75 11:76 12:6 12:38 14:35 15:51 16:120 16:123 19:41 19:46 19:58 21:51 21:60 21:62 21:69 22:26 22:43 22:78 26:69 29:16 29:31 33:7 37:83 37:104 37:109 38:45 42:13 43:26 51:24 53:37 57:26 60:4 87:19
 İsmâîl	<isomaAEiyl	2:125 2:127 2:133 2:136 2:140 3:84 4:163 6:86 14:39 19:54 21:85 38:48
 İshâk	<isoHaAq	2:133 2:136 2:140 3:84 4:163 6:84 11:71 12:6 12:38 14:39 19:49 21:72 29:27 37:112 37:113 38:45
-Ya‘kûb	yaEoquwb	2:132 2:133 2:136 2:140 3:84 4:163 6:84 11:71 12:6 12:38 12:68 19:6 19:49 21:72 29:27 38:45 3:93 İsrâîl
+Ya‘kûb	yaEoquwb	2:132 2:133 2:136 2:140 3:84 4:163 6:84 11:71 12:6 12:38 12:68 19:6 19:49 21:72 29:27 38:45 İsrâîl 3:93 19:58
 Yûsuf	yuwsuf	6:84 12:4 12:7 12:8 12:9 12:10 12:11 12:17 12:21 12:29 12:46 12:51 12:56 12:58 12:69 12:76 12:77 12:80 12:84 12:85 12:87 12:89 12:90 12:94 12:99 40:34
 Sonrakiler
 Şu‘ayb	$uEayob	7:85 7:88 7:90 7:92 11:84 11:87 11:91 11:94 26:177 29:36
@@ -72,7 +44,7 @@ Dâvûd	daAwud	2:251 4:163 5:78 6:84 17:55 21:78 21:79 27:15 27:16 34:10 34:13 3
 Suleymân	sulayoma%60n	2:102 4:163 6:84 21:78 21:79 21:81 27:15 27:16 27:17 27:18 27:30 27:36 27:44 34:12 38:30 38:34
 Diğerleri
 Eyyûb	>ay~uwb	4:163 6:84 21:83 38:41
-Yûnus	yuwnus	4:163 6:86 10:98 37:139 21:85 zunnûn
+Yûnus	yuwnus	4:163 6:86 10:98 37:139 zunnûn 21:87
 İlyâs	<iloyaAs	6:85 37:123 37:130
 İdrîs	<idoriys	19:56 21:85
 Elyesa‘	{loyasaEa	6:86 38:48
@@ -80,9 +52,9 @@ Zulkifl	kfl	21:85 38:48
 Âl-i İmran
 Zekeriyâ	zakariy~aA	3:37 3:38 6:85 19:2 19:7 21:89
 Yahya	yaHoyaY%60	3:39 6:85 19:7 19:12 21:90
-‘İsâ	EiysaY	2:87 2:136 2:253 3:45 3:52 3:55 3:59 3:84 4:157 4:163 4:171 5:46 5:78 5:110 5:112 5:114 5:116 6:85 19:34 33:7 42:13 43:63 57:27 61:6 61:14 <br>5:17 5:72 5:75 9:30 9:31 el-mesîh
+‘İsâ	EiysaY	2:87 2:136 2:253 3:45 3:52 3:55 3:59 3:84 4:157 4:163 4:171 5:46 5:78 5:110 5:112 5:114 5:116 6:85 19:34 33:7 42:13 43:63 57:27 61:6 61:14 <br>el-mesîh 5:17 5:72 5:75 9:30 9:31
 Nebilerin mühürü <a name="v=33:56&r=Slw">SAS<a>
-Muhammed	muHam~ad	3:144 33:40 47:2 48:29 61:6 Ahmed`
+Muhammed	Hmd	3:144 33:40 47:2 48:29 Ahmed 61:6`
 
 function line(str) {
   let verse = x => x.includes(':')? 
@@ -100,5 +72,3 @@ tablo.innerHTML =
 </script>
 
 <script src="init.js"></script>
-</body>
-</html>
