--- a/ders/index.html
+++ b/ders/index.html
@@ -16,7 +16,7 @@
   <li><a href="Allah.html">Lafza-i Celâl</a>
   <li><a href="enbiya.html">Peygamberler</a>
   <li><a href="yaygin.html">Sık geçen kelimeler</a>
-  <li>Özel isimler -- yapılıyor
+  <li><a href="isimler.html">Özel isimler</a>
   <li><a href="sunum4.2.html">Sunum V4.2</a>
 </ol>
 <br>
