--- a/ders/index.html
+++ b/ders/index.html
@@ -40,12 +40,13 @@ Videolar burada</a></p>
 <h3>Örnek Sayfalar</h3>
 <p>Iqra yazılımını uygulayan web sayfaları</p>
 <ol>
-  <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet</a>
-  <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok</a>
-  <li><a href="/Kitap/cuma/geylani.html">Letters of Geylani</a>
+  <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet (Karabaşoğlu)</a>
+  <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok (Eyler)</a>
+  <li><a href="/Kitap/cuma/geylani.html">Letters of Abdulqadir Geylani</a>
+  <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (A Zaman)</a>
   <li><a href="/Kitap/garibce/">Garibce'den Seçmeler</a>
-  <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuş Kitap</a>
-  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik</a>
+  <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
+  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a>
 </ol>
 <br>
 
