simplify cuma pages

--- a/ders/index.html
+++ b/ders/index.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="/Kuran/image/icon.png">
 <title>Iqra Dersler</title>
 
-<h2>Giriş</h2>
+<h2>Iqra &ndash; Dersler</h2>
 
 <h3>Kur'an Kelimeleri</h3>
 <p>Yüce Kitabımızda kelime analizleri</p>
@@ -18,6 +18,19 @@
   <li><a href="yaygin.html">Sık geçen kelimeler</a>
   <li><a href="isimler.html">Özel isimler</a>
   <li><a href="sunum4.2.html">Sunum V4.2</a>
+</ol>
+<br>
+
+<h3>Örnek Sayfalar</h3>
+<p>Iqra yazılımını uygulayan web sayfaları</p>
+<ol>
+  <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet (Karabaşoğlu)</a>
+  <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok (A Eyler)</a>
+  <li><a href="/Kitap/cuma/geylani.html">Letters of Abdulqadir Geylani</a>
+  <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (A Zaman)</a>
+  <li><a href="/Kitap/garibce/">Garibce'den Seçmeler</a>
+  <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
+  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a>
 </ol>
 <br>
 
@@ -36,28 +49,4 @@
 href="https://www.youtube.com/playlist?list=PLBDiqooDrruuxXBQfIcHErlGbFcD21YQ1">
 Videolar burada</a></p>
 <br>
-
-<h3>Örnek Sayfalar</h3>
-<p>Iqra yazılımını uygulayan web sayfaları</p>
-<ol>
-  <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet (Karabaşoğlu)</a>
-  <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok (Eyler)</a>
-  <li><a href="/Kitap/cuma/geylani.html">Letters of Abdulqadir Geylani</a>
-  <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (A Zaman)</a>
-  <li><a href="/Kitap/garibce/">Garibce'den Seçmeler</a>
-  <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
-  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a>
-</ol>
-<br>
-
-<!-- <h3>Garibce'den Seçmeler</h3>
-<p><a href=https://garibce.blogspot.com/ target=Kuran>garibce.blogspot.com</a> sitesinden alıntılar</p>
-<ol>
-  <li><a href="/Kitap/garibce/hakdin.html">Din dediğin ne ki?</a>
-  <li><a href="/Kitap/garibce/mihrap.html">Mihrap Yazıları</a>
-  <li><a href="/Kitap/garibce/bahane.html">Bahaneye benzese</a>
-  <li><a href="/Kitap/garibce/takva.html">Cemal ve Celal</a>
-  <li><a href="/Kitap/garibce/ihsan.html">Adaletten öte: İhsan</a>
-  <li><a href="/Kitap/garibce/diken.html">Ayağıma diken batsa</a>
-</ol> -->
 
