--- a/KK/korunmus.html
+++ b/KK/korunmus.html
@@ -13,12 +13,16 @@
   </head>
   <body>
 
+<h3>Özet</h3>
+<p class=it>Kuran-ı Kerim'de benzeşen ayetler arasındaki farklar bazılarına göre tutarsızlık belirtisi sayılmış. Halbuki bu farklar kitabın korunmuş olduğunu açıkça gösteriyor. Çünkü <b>yalanda ve tahrifte  ittifak olmaz</b>. Bütün milletlerin ve cemaatlerin üstünde anlaştığı bir metin var, o halde vahiyle gelen mesaj bu olmalı.
+</p>
+<br>
 <h2>Bir Metin Nasıl Korunur?</h2>
 
 <div id=contents>
   <button id=buton onclick="menu1.hidden=!menu1.hidden">☰</button>
   <ul id=menu1 hidden>
-    <li><a href="#sinonim">1. Eşanlamlı</a>
+    <li><a href="#benzer">1. Eşanlamlı</a>
     <li><a href="#kelime">2. Kelime sırası</a>
     <li><a href="#i̇mla">3. İmlâ farklı</a>
     <li><a href="#zamirler">4. Zamirler</a>
@@ -26,18 +30,19 @@
     <li><a href="#nimet-sunnet">6. Nimet, Sunnet</a>
     <li><a href="#sin-sad">7. Sin mi Sad mı?</a>
     <li><a href="#korunmamis">Korunmamış kitap</a>
+    <li><a href="#sonuc">Sonuç</a>
     <li><a href="#referans">Referans</a>
   </ul>
 </div>
 
-<p>Bir kaç yüz sayfalık bir metnin asırlarca değişmeden kalması olağan bir durum değildir. Yazarı hayatta ise, ilk yazdıklarını beğenmez, sürekli daha iyisini yazmaya çalışır. Yazarı öldükten sonra metin hâlâ yaşıyorsa, bu sefer metni kopyalayanlar değiştirir. Asıl metne sadakati bozmanın üç sebebi olabilir: a) Hafıza ya da okuma hatası ile, b) Daha iyisini yapıyorum zannı ile, c) Tahrif etmek niyeti ile. Sebep ne olursa olsun, bildiğimiz bütün edebi ve tarihi metinler bu değişimden kurtulamamış. Tek istisna Kuran-ı Kerim:</p>
+<p>Bir kaç yüz sayfalık bir metnin asırlarca değişmeden kalması olağan bir durum değildir. Yazarı hayatta ise, ilk yazdıklarını beğenmez, sürekli daha iyisini yazmaya çalışır. Yazarı öldükten sonra metin hâlâ yaşıyorsa, bu sefer metni kopyalayanlar değiştirir. Asıl metne sadakati bozmanın üç sebebi olabilir: a) Hafıza ya da okuma hatası ile, b) Daha iyisini yapıyorum zannı ile, c) Tahrif etmek niyeti ile. Sebep ne olursa olsun, bildiğimiz bütün edebi ve tarihi metinler bu değişimden kurtulamamış. Kuran-ı Kerim bir istisna:</p>
 
 <p>15:9 <a href="/Kuran/#v=15:9" target=iqraTop>
 <i>Doğrusu Kitâbı Biz indirdik, koruyucusu elbette Biziz.</i></a>
 </p>
 <p>Metnin muhafazasının, yani asırlarca korunmasının ne kadar zor olduğunu özellikle benzer ayet çiftlerinde okuyoruz. Aşağıda verilen birkaç çift ayet, konuyu açıklayan örneklerden ibaret. Bunlar gibi çok benzerlik bulunabilir.</p>
 
-<h3 id="sinonim">1. Eşanlamlı kelimeler</h3>
+<h3 id="benzer">1. Eşanlamlı kelimeler</h3>
 <p>Bu örnekte <b>ersil</b> ve <b>ib’as</b>, ikisi de “gönder” anlamında. Lakin A’raf suresinde biri kullanılırken, Şu’ara suresinde diğer kelime var. Hafızlar iki ayeti karıştırmadan doğru kelime ile okumak zorunda.
 <figure>
   <img src="./ercih.png" alt="ercih" /> 
@@ -221,6 +226,24 @@
 </p>
 
 <p>Değişiklik yalnız bundan ibaret değil. 20 bin beyit içinde, sonradan eklenen, çıkarılan, değiştirilen çok örnek bulunabilir ki hepsi tahrif sayılır. Hemen eklemeliyim, bu zaaf Mesnevi’ye has değil, insan tabiatının bir gereği olarak bütün yazılı metinlerde gözlenebilir. İlahi koruma yoksa her metin tahrife açıktır.</p>
+
+<h3 id="sonuc">8. Sonuç</h3>
+<p>Gustav Flügel 1850'lerde şunu yazmış:
+</p>
+<blockquote class=it>
+“... the genius of the entire Arabic Language, as found in the
+writings from the time of Mohammed onwards, has been so
+much influenced by the power and authority of Koran that its
+language has itself become, so to speak, the firm base for
+later eras.”
+</blockquote><blockquote>
+Bütün Arap dilinin dehası, Hz Muhammed döneminden
+sonraki yazılarda tespit edildiği şekliyle, Kuran’ın gücü
+ve otoritesinden o kadar fazla etkilenmiştir ki, onun
+bizzat kendi dili sonraki çağlar için sağlam bir kaide
+haline gelmiştir.
+</blockquote>
+<p>Başka bir deyişle, "Kuran gramere uygun mu?" diye sorulmaz, gramer kuralları Kuran'a göre ayarlanır.</p>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-yQ-CEKOYzU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
