--- a/ders/index.html
+++ b/ders/index.html
@@ -25,7 +25,8 @@
 <p>Iqra yazılımını uygulayan web sayfaları</p>
 <ol>
   <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet (Karabaşoğlu)</a>
-  <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok (A Eyler)</a>
+  <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok (Eyler)</a>
+  <li><a href="/Kitap/cuma/feryad.html">Enbiyanın Feryadı (Eyler)</a>
   <li><a href="/Kitap/cuma/geylani.html">Letters of Abdulqadir Geylani</a>
   <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (A Zaman)</a>
   <li><a href="/Kitap/garibce/">Garibce'den Seçmeler</a>
