--- a/ders/index.html
+++ b/ders/index.html
@@ -8,8 +8,23 @@
 <link rel="icon" href="/Kuran/image/icon.png">
 <title>Iqra Dersler</title>
 
+<style>
+  h3 { margin-bottom: 8px; }
+  p, ol { margin: 8px 0; }
+  .narrow {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 3%;
+    width: 46%;
+  }
+@media screen and (max-width: 550px) {
+  .narrow { width: 96%; }
+}
+</style>
+
 <h2>Iqra &ndash; Dersler</h2>
 
+<div class=narrow>
 <h3>Kur'an Kelimeleri</h3>
 <p>Yüce Kitabımızda kelime analizleri</p>
 <ol>
@@ -18,23 +33,27 @@
   <li><a href="yaygin.html">Sık geçen kelimeler</a>
   <li><a href="isimler.html">Özel isimler</a>
   <li><a href="sunum4.2.html">Sunum V4.2</a>
+  <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
 </ol>
-<br>
 
-<h3>Örnek Sayfalar</h3>
-<p>Iqra yazılımını uygulayan web sayfaları</p>
+<h3>Alıntılar</h3>
+<p>Yazılımı uygulayan web sayfaları</p>
 <ol>
   <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet (Karabaşoğlu)</a>
-  <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok (Eyler)</a>
-  <li><a href="/Kitap/cuma/feryad.html">Enbiyanın Feryadı (Eyler)</a>
-  <li><a href="/Kitap/cuma/medine.html">Medine Dönemi (Eyler)</a>
   <li><a href="/Kitap/cuma/geylani.html">Letters of Abdulqadir Geylani</a>
   <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (A Zaman)</a>
   <li><a href="/Kitap/garibce/">Garibce'den Seçmeler</a>
-  <li><a href="/Kitap/KK/korunmus.html" target=KK>Korunmuşluk örnekleri</a>
-  <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a>
+  <!-- <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a> -->
 </ol>
-<br>
+</div>
+<div class=narrow>
+<h3>Cuma Dersleri</h3>
+<ol>
+  <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok</a>
+  <li><a href="/Kitap/cuma/feryad.html">Enbiyanın Feryadı</a>
+  <li><a href="/Kitap/cuma/medine.html">Medine Dönemi</a>
+  <li><a href="/Kitap/cuma/iktibas.html"></a>Şiirde iktibas
+</ol>
 
 <h3>Arapça Dersler</h3>
 <p>Arapça’yı Kuran’dan alınmış örneklerle öğrenebilir miyiz?</p>
@@ -47,8 +66,9 @@
   <li><a href="06.html">Fiil çekimi</a>
   <li><a href="07.html">Kelime türetme</a>
 </ol>
-<p><a target="video"
+<p>Videolar <a target="video"
 href="https://www.youtube.com/playlist?list=PLBDiqooDrruuxXBQfIcHErlGbFcD21YQ1">
-Videolar burada</a></p>
+burada</a></p>
+</div>
 <br>
 
