--- a/ders/index.html
+++ b/ders/index.html
@@ -11,14 +11,14 @@
 <style>
   h3 { margin-bottom: 8px; }
   p, ol { margin: 8px 0; }
-  .narrow {
+  .narrow, .gap {
     display: inline-block;
     vertical-align: top;
-    margin-right: 3%;
-    width: 46%;
   }
+  .narrow { width: 46%; }
+  .gap { width: 6%; }
 @media screen and (max-width: 550px) {
-  .narrow { width: 96%; }
+  .narrow { width: 100%; }
 }
 </style>
 
@@ -39,24 +39,26 @@
 <h3>Alıntılar</h3>
 <p>Yazılımı uygulayan web sayfaları</p>
 <ol>
-  <li><a href="/Kitap/cuma/adalet.html">Adalet ve ibadet (Karabaşoğlu)</a>
+  <li><a href="/Kitap/cuma/adalet.html"><small>Adalet ve ibadet (Karabaşoğlu)</small></a>
   <li><a href="/Kitap/cuma/geylani.html">Letters of Abdulqadir Geylani</a>
   <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (A Zaman)</a>
   <li><a href="/Kitap/garibce/">Garibce'den Seçmeler</a>
+  <li><a href="/Kitap/cuma/iktibas.html"><small>Ahmed ü Mahmûd u Muhammed</small></a>
   <!-- <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a> -->
 </ol>
 </div>
+<div class=gap></div>
 <div class=narrow>
 <h3>Cuma Dersleri</h3>
 <ol>
   <li><a href="/Kitap/cuma/rabler.html">Allah bir, rabler çok</a>
   <li><a href="/Kitap/cuma/feryad.html">Enbiyanın Feryadı</a>
   <li><a href="/Kitap/cuma/medine.html">Medine Dönemi</a>
-  <li><a href="/Kitap/cuma/iktibas.html"></a>Şiirde iktibas
+  <li><a href="/Kitap/KK/hakikaten.html"></a>Hakikaten Korunmuş
 </ol>
 
 <h3>Arapça Dersler</h3>
-<p>Arapça’yı Kuran’dan alınmış örneklerle öğrenebilir miyiz?</p>
+<p>Kuran’dan alınmış örneklerle Arapça</p>
 <ol>
   <li><a href="01.html">İsimler</a>
   <li><a href="02.html">Cümle yapısı</a>
