--- a/cuma/quest.html
+++ b/cuma/quest.html
@@ -16,7 +16,7 @@
 <p>By Asad Zaman, on May 11, 2022 <br>
 Director Social Sciences <br>
 <a href="https://career.alnafi.com/" target=Kuran>Al-Nafi Online Educational Platform</a></p>
-<p><img src="whoamI.jpg" alt="who am I"></p>
+<p><img src="quest.jpg" alt="who am I"></p>
 
 <div class="pre">The famous quotation "I think therefore I am" addresses the trivial question of existence, but fails to tackle the far more central question "Who am I?". This question of identity, which superficially seems like the simplest of questions, is not only the most important question we all face, but also, for reasons to be explained, the most difficult question. A write-up of the English video lecture is also given in the link above.
 <hr>
